--- a/natours-project/index.html
+++ b/natours-project/index.html
@@ -72,9 +72,15 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
+              <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 1" class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg" />
+              <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 2" class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg" />
+              <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px" alt="Photo 3" class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg" />
+              <!--
+                  WHAT THE IMG TAGS USED TO BE CODED AS (SEE ABOVE FOR EXAMPLE OF DENSITY AND RESOLUTION SWITCHING CASES -- SEE FOOTER FOR DENSITY AND ART DIRECTION SWITCHING CASES) 
               <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1" />
               <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2" />
-              <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3" />
+              <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3" /> 
+              -->
             </div>
           </div>
         </div>
@@ -288,8 +294,8 @@
                   <label for="name" class="form__label">Full name</label>
                 </div>
                 <div class="form__group">
-                  <input id="name" type="email" class="form__input" placeholder="Email address" required autocomplete="off" />
-                  <label for="name" class="form__label">Email address</label>
+                  <input id="email" type="email" class="form__input" placeholder="Email address" required autocomplete="off" />
+                  <label for="email" class="form__label">Email address</label>
                 </div>
                 <div class="form__group u-margin-bottom-medium">
                   <div class="form__radio-group">
@@ -315,7 +321,10 @@
     </main>
     <footer class="footer">
       <div class="footer__logo-box">
-        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+        <picture class="footer__logo">
+          <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)" />
+          <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo" src="img/logo-green-2x.png" />
+        </picture>
       </div>
       <div class="row">
         <div class="col-1-of-2">
